# SentimentOps

./: .env.sample  .gitignore  README.md  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
data/bronze/: reviews.dvc
data/bronze/reviews/: 0-5d9765c3-3ccd-417a-86cd-3702ca1ab64f-0.parquet
data/gold/: .gitignore  reviews_ml.dvc
data/silver/: reviews.dvc
docs/adr/: 001-parquet-data-format.md  002-delta-lake-medallion.md  003-medallion-architecture.md  004-gold-layer-design.md  005-pandera-over-great-expectations.md  006-feast-removal.md
notebooks/: explore.ipynb
pipelines/: constants.py  feature_engineering.py  ingest.py  silver_validation.py  transform.py
tests/: test_feature_engineering.py  test_transform.py
